--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Include="Simulation.fs" />
     <Compile Include="DevsModel.fs" />
+    <Compile Include="AtomicModel.fs" />
+    <Compile Include="CoupledModel.fs" />
   </ItemGroup>
 
   <ItemGroup>
