Rewrite models to suit F# manner

--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -10,9 +10,8 @@
     <Compile Include="EventInbox.fs" />
     <Compile Include="Simulation.fs" />
     <Compile Include="DevsModel.fs" />
-    <Compile Include="AtomicModel.fs" />
-    <Compile Include="CoupledModel.fs" />
-    <Compile Include="SequentialCoordinators.fs" />
+    <Compile Include="SequentialCoordinator.fs" />
+    <Compile Include="SequentialRunner.fs" />
   </ItemGroup>
 
   <ItemGroup>
