--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -11,6 +11,8 @@
     <Compile Include="ISimulationContext.fs" />
     <Compile Include="Simulation.fs" />
     <Compile Include="DevsModel.fs" />
+    <Compile Include="AtomicModel.fs" />
+    <Compile Include="CoupledModel.fs" />
     <Compile Include="SequentialCoordinator.fs" />
     <Compile Include="SequentialRunner.fs" />
   </ItemGroup>
