--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <Compile Include="ImmutableCollection.fs" />
-    <Compile Include="EventInbox.fs" />
+    <Compile Include="InputEventBuffer.fs" />
     <Compile Include="ISimulationContext.fs" />
     <Compile Include="Simulation.fs" />
     <Compile Include="DevsModel.fs" />
