immutable な CFG データ構造を定義

--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="Sequential\SequentialRunner.fs" />
     <Compile Include="ProcessOriented\WaitCondition.fs" />
     <Compile Include="ProcessOriented\ProcessEnv.fs" />
+    <Compile Include="ProcessOriented\ControlFlowGraph.fs" />
     <Compile Include="ProcessOriented\ProcessModelBuilderImpl.fs" />
     <Compile Include="ProcessOriented\ProcessModel.fs" />
   </ItemGroup>
