--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="ProcessOriented\WaitCondition.fs" />
     <Compile Include="ProcessOriented\ProcessEnv.fs" />
     <Compile Include="ProcessOriented\ControlFlowGraph.fs" />
+    <Compile Include="ProcessOriented\ProcessModelBuilderResult.fs" />
     <Compile Include="ProcessOriented\ProcessModelBuilderImpl.fs" />
     <Compile Include="ProcessOriented\ProcessModel.fs" />
   </ItemGroup>
