--- a/PopDEVS.Tests/PopDEVS.Tests.fsproj
+++ b/PopDEVS.Tests/PopDEVS.Tests.fsproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Expecto" Version="8.12.0" />
+    <PackageReference Include="Expecto.TestResults" Version="8.12.0" />
   </ItemGroup>
 
   <ItemGroup>
