Initial impl of conversion from CompiledStates to AtomicModel

--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="ProcessOriented\ProcessModelBuilderResult.fs" />
     <Compile Include="ProcessOriented\ProcessModelBuilderImpl.fs" />
     <Compile Include="ProcessOriented\StateReducer.fs" />
+    <Compile Include="ProcessOriented\CompiledState.fs" />
     <Compile Include="ProcessOriented\ProcessModel.fs" />
   </ItemGroup>
 
