--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <PackageReference Include="FSharp.Quotations.Evaluator" Version="2.0.0" />
+    <PackageReference Include="FSharpx.Collections" Version="2.1.1" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
 
