--- a/PopDEVS/PopDEVS.fsproj
+++ b/PopDEVS/PopDEVS.fsproj
@@ -30,10 +30,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Quotations.Evaluator" Version="2.0.0" />
-    <PackageReference Include="FSharpx.Collections" Version="2.1.1" />
-    <PackageReference Include="FsRandom" Version="1.4.0.1" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+    <PackageReference Include="FSharp.Quotations.Evaluator" Version="[2,3)" />
+    <PackageReference Include="FSharpx.Collections" Version="[2.1.1,3)" />
+    <PackageReference Include="FsRandom" Version="[1.4.0.1,2)" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
